--- a/LeetCode Solutions/1693. Daily Leads and Partners.md
+++ b/LeetCode Solutions/1693. Daily Leads and Partners.md
@@ -1,5 +1,5 @@
 ```
 SELECT date_id, make_name, COUNT(DISTINCT(lead_id)) AS unique_leads, COUNT(DISTINCT(partner_id)) AS unique_partners
 FROM DailySales
-GROUP BY date_id, make_name`
+GROUP BY date_id, make_name
 ```
